logout commit
